fixed a button jump problem I created.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2355,7 +2355,7 @@ body, table td, select
 .gwt-Button {
   margin: 0;
   border: 0px;
-  padding: 1px 10px;
+  padding: 2px 10px;
   margin-right: 3px;
   text-decoration: none;
   font-size: 11px;
